<resources>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="ra">RA</string>
    <string name="cpf">CPF</string>
    <string name="curso">Curso</string>
    <string name="ano">Ano</string>
    <string name="turno">Turno</string>
    <string name="salvar">Salvar</string>
    <string name="ver_contatos">Ver Contatos</string>
</resources>